Added tabs and input onclick

--- a/index.html
+++ b/index.html
@@ -6,12 +6,43 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div class="header">
-    <button class="file">file</button>
-  </div>
-  <div class="tableDiv">
+  <header class="header">
+    <details>
+      <summary>File</summary>
+      <p>New</p>
+      <p>Open...</p>
+      <p>Save</p>
+      <p>Save as...</p>
+    </details>
+  </header>
+  <div id="tableDiv">
 
   </div>
+  <footer class="footer">
+
+
+<div class="tabs">
+
+
+
+
+  <div class="tab">
+      <input type="radio" id="tab-1" name="tab-group-1" checked>
+      <label for="tab-1">List 1</label>
+  </div>
+
+  <div class="tab">
+      <input type="radio" id="tab-2" name="tab-group-1">
+      <label for="tab-2">List 2</label>
+  </div>
+
+   <div class="tab">
+      <input type="radio" id="tab-3" name="tab-group-1">
+      <label for="tab-3">List 3</label>
+  </div>
+
+</div>
+  </footer>
   <script src="main.js"></script>
 </body>
 </html>
