--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
   <div class="tab">
       <input type="radio" id="tab-1" name="tab-group-1" checked>
-      <label for="tab-1">List 1</label>
+      <label for="tab-1">Sheet 1</label>
   </div>
 
   <div class="tab">
       <input type="radio" id="tab-2" name="tab-group-1">
-      <label for="tab-2">List 2</label>
+      <label for="tab-2">Sheet 2</label>
   </div>
 
    <div class="tab">
       <input type="radio" id="tab-3" name="tab-group-1">
-      <label for="tab-3">List 3</label>
+      <label for="tab-3">Sheet 3</label>
   </div>
 
 </div>
