--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CalcSheet</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <header class="header">
@@ -43,6 +43,6 @@
 
 </div>
   </footer>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
