Completely rewritred main.js. Created tableUI, column names function, infinite table, and other stuff

--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
 </head>
 <body>
   <header class="header">
-    <details>
-      <summary>File</summary>
-      <p>New</p>
-      <p>Open...</p>
-      <p>Save</p>
-      <p>Save as...</p>
-    </details>
+    <button id = 'new'>new</button>
   </header>
 
   <div id="tableDiv">
