Content div creation at initialization

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <button id = 'new'>new</button>
   </header>
 
-  <div id="tableDiv">
-  </div>
+<!--   <div id="tableDiv">
+  </div> -->
 
   <footer class="footer">
     <div class="tabs">
