New tables and new tabs creation

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <button id = 'new'>new</button>
   </header>
 
-<!--   <div id="tableDiv">
-  </div> -->
+
 
   <footer class="footer">
     <div class="tabs">
-      <div class="tab">
+ <!--      <div class="tab">
           <input type="radio" id="tab-1" name="tab-group-1" checked>
           <label for="tab-1">Sheet 1</label>
       </div>
@@ -28,7 +27,7 @@
       <div class="tab">
           <input type="radio" id="tab-3" name="tab-group-1">
           <label for="tab-3">Sheet 3</label>
-      </div>
+      </div> -->
     </div>
   </footer>
   <script src="js/main.js"></script>
