Deleting tabs. POST function. Some buttons events rewrited

--- a/index.html
+++ b/index.html
@@ -8,27 +8,13 @@
 <body>
   <header class="header">
     <button id = 'new'>new</button>
+    <button id = 'delete'>delete</button>
   </header>
 
 
 
   <footer class="footer">
-    <div class="tabs">
- <!--      <div class="tab">
-          <input type="radio" id="tab-1" name="tab-group-1" checked>
-          <label for="tab-1">Sheet 1</label>
-      </div>
-
-      <div class="tab">
-          <input type="radio" id="tab-2" name="tab-group-1">
-          <label for="tab-2">Sheet 2</label>
-      </div>
-
-      <div class="tab">
-          <input type="radio" id="tab-3" name="tab-group-1">
-          <label for="tab-3">Sheet 3</label>
-      </div> -->
-    </div>
+    <div class="tabs"></div>
   </footer>
   <script src="js/main.js"></script>
 </body>
