--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id = 'delete'>delete</button>
   </header>
 
-
+  <div id="tableDiv"></div>
 
   <footer class="footer">
     <div class="tabs"></div>
